# answer

./: .env.example  .gitignore  README.md  api.py  pyproject.toml  run.py
.github/workflows/: deploy.yml
demo/: colab_live_demo.ipynb
eval/: build_site_data.py  dataset_stress.yaml  dataset_v0.yaml  freeze_annotations.py  freeze_answers.py  freeze_chunks.py  freeze_embeddings.py  freeze_fetch.py  freeze_queries.py  freeze_query_embeddings.py  freeze_refinement.py  freeze_search.py  freeze_sufficiency.py  replay_retrieval.py  run_eval.py
src/answer/: __init__.py  chunking.py  cite.py  config.py  embedding.py  fetch.py  llm.py  mmr.py  pipeline.py  prompts.py  rerank.py  search.py  sufficiency.py  vector_store.py
tests/: conftest.py  test_fetch.py  test_search.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  data.ts  live.ts  liveRun.ts  playback.ts  run.json  styles.css
web/src/components/: Answer.tsx  Home.tsx  LivePlayer.tsx  Player.tsx  Selector.tsx  StageDetail.tsx  StageTree.tsx
