[project]
name = "answer"
version = "0.0.1"
description = "Agentic internet-search and RAG system"
requires-python = ">=3.12"
dependencies = [
    "ddgs",
    "crawl4ai",
    "langchain-ollama",
    "langchain-openai",
    "langchain-core",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv",
    "langsmith",
    "langgraph>=1.1.10",
    "pyyaml>=6.0.3",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.4",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/answer"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: tests that hit the live internet (search engines, real URLs)",
]
